--- a/Task 4/index.html
+++ b/Task 4/index.html
@@ -17,123 +17,129 @@
             </header>
             <div class="placeholder"></div>
 
-            <main class="content">
-                <div class="content__nav-bar">
-                    <a href="" class="content__nav-bar__nav-bar-item">
+            <main class="main">
+                <div class="navBar">
+                    <a href="" class="navBar__item">
                         Main page
                     </a>
-                    <a href="" class="content__nav-bar__nav-bar-item">
+                    <a href="" class="navBar__item">
                         Secondary page
                     </a>
-                    <a href="" class="content__nav-bar__nav-bar-item">
+                    <a href="" class="navBar__item">
                         Some other page
                     </a>
-                    <a href="" class="content__nav-bar__nav-bar-item">
+                    <a href="" class="navBar__item">
                         More pages
                     </a>
-                    <a href="" class="content__nav-bar__nav-bar-item">
+                    <a href="" class="navBar__item">
                         Last page
                     </a>
                 </div>
-                <div class="content__posts-area">
-                    <div class="content__posts-area__post">
-                        <div class="content__posts-area__post__content-container">
-                            <p class="content__posts-area__post__content-container__text">
+                <div class="postsArea">
+
+                    <div class="postsArea__post">
+                        <div class="postsArea__post__contentContainer">
+                            <p class="postsArea__post__contentContainer__text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                             </p>
                         </div>
-                        <hr class="content__posts-area__post__divider">
-                        <div class="content__posts-area__post__buttons-container">
-                            <a href="" class="content__posts-area__post__buttons-container__button">
+
+                        <hr class="postsArea__post__divider">
+                        <div class="postsArea__post__buttonsContainer">
+                            <a href="" class="postsArea__post__buttonsContainer__button">
                                 Like
                             </a>
-                            <a href="" class="content__posts-area__post__buttons-container__button">
+                            <a href="" class="postsArea__post__buttonsContainer__button">
                                 Comment
                             </a>
                         </div>
                     </div>
 
-                    <div class="content__posts-area__post">
-                        <div class="content__posts-area__post__content-container">
-                            <img src="cat.png" class="content__posts-area__post__content-container__image">
+                    <div class="postsArea__post">
+                        <div class="postsArea__post__contentContainer">
+                            <img src="cat.png" class="postsArea__post__contentContainer__image">
                         </div>
-                        <hr class="content__posts-area__post__divider">
-                        <div class="content__posts-area__post__buttons-container">
-                            <a href="" class="content__posts-area__post__buttons-container__button">
+                        <hr class="postsArea__post__divider">
+                        <div class="postsArea__post__buttonsContainer">
+                            <a href="" class="postsArea__post__buttonsContainer__button">
                                 Like
                             </a>
-                            <a href="" class="content__posts-area__post__buttons-container__button">
+                            <a href="" class="postsArea__post__buttonsContainer__button">
                                 Comment
                             </a>
                         </div>
                     </div>
 
-                    <div class="content__posts-area__post">
-                        <div class="content__posts-area__post__title-container">
-                            <p class="content__posts-area__post__title-container__title">
+                    <div class="postsArea__post">
+                        <div class="postsArea__post__titleContainer">
+                            <p class="postsArea__post__titleContainer__title">
                                 Some header
                             </p>
                         </div>
-                        <hr class="content__posts-area__post__divider top-divider">
-                        <div class="content__posts-area__post__content-container">
-                            <p class="content__posts-area__post__content-container__text">
+                        <hr class="postsArea__post__divider topDivider">
+                        <div class="postsArea__post__contentContainer">
+                            <p class="postsArea__post__contentContainer__text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                             </p>
                         </div>
-                        <hr class="content__posts-area__post__divider">
-                        <div class="content__posts-area__post__buttons-container">
-                            <a href="" class="content__posts-area__post__buttons-container__button">
+                        <hr class="postsArea__post__divider">
+                        <div class="postsArea__post__buttonsContainer">
+                            <a href="" class="postsArea__post__buttonsContainer__button">
                                 Like
                             </a>
-                            <a href="" class="content__posts-area__post__buttons-container__button">
+                            <a href="" class="postsArea__post__buttonsContainer__button">
                                 Comment
                             </a>
                         </div>
                     </div>
 
-                    <div class="content__posts-area__post">
-                        <div class="content__posts-area__post__content-container">
-                            <p class="content__posts-area__post__content-container__text">
+                    <div class="postsArea__post">
+                        <div class="postsArea__post__contentContainer">
+                            <p class="postsArea__post__contentContainer__text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                             </p>
                         </div>
-                        <hr class="content__posts-area__post__divider">
-                        <div class="content__posts-area__post__buttons-container">
-                            <a href="" class="content__posts-area__post__buttons-container__button">
+
+                        <hr class="postsArea__post__divider">
+                        <div class="postsArea__post__buttonsContainer">
+                            <a href="" class="postsArea__post__buttonsContainer__button">
                                 Like
                             </a>
-                            <a href="" class="content__posts-area__post__buttons-container__button">
+                            <a href="" class="postsArea__post__buttonsContainer__button">
                                 Comment
                             </a>
                         </div>
                     </div>
 
-                    <div class="content__posts-area__post">
-                        <div class="content__posts-area__post__content-container">
-                            <p class="content__posts-area__post__content-container__text">
+                    <div class="postsArea__post">
+                        <div class="postsArea__post__contentContainer">
+                            <p class="postsArea__post__contentContainer__text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                             </p>
                         </div>
-                        <hr class="content__posts-area__post__divider">
-                        <div class="content__posts-area__post__buttons-container">
-                            <a href="" class="content__posts-area__post__buttons-container__button">
+
+                        <hr class="postsArea__post__divider">
+                        <div class="postsArea__post__buttonsContainer">
+                            <a href="" class="postsArea__post__buttonsContainer__button">
                                 Like
                             </a>
-                            <a href="" class="content__posts-area__post__buttons-container__button">
+                            <a href="" class="postsArea__post__buttonsContainer__button">
                                 Comment
                             </a>
                         </div>
                     </div>
+
                 </div>
-                <div class="content__right-bar-container">
-                    <div class="content__right-bar-container__right-bar">
-                        <div class="content__right-bar__info-box">
-                            <div class="content__right-bar__info-box__text-container">
+
+                <div class="rightBarContainer">
+                    <div class="rightBarContainer__rightBar">
+                        <div class="rightBarContainer__rightBar__infoBox">
+                            <div class="rightBarContainer__rightBar__infoBox__textContainer">
                                 <p>
                                     For example, some new and usefull fixed text. And many another text and more text...
                                 </p>
                             </div>
-                            <div class="content__right-bar__info-box__text-container">
+                            <div class="rightBarContainer__rightBar__infoBox__textContainer">
                                 <p>
                                     For example, some new and usefull fixed text. And many another text and more text...
                                 </p>
@@ -141,20 +147,20 @@
                             
                         </div>
                         <!-- <div class="content__right-bar-placeholder"></div> -->
-                        <div class="content__right-bar__info-box">
-                            <div class="content__right-bar__info-box__header-container">
-                                <p class="content__right-bar__info-box__header-container__header">
+                        <div class="rightBarContainer__rightBar__infoBox">
+                            <div class="rightBarContainer__rightBar__infoBox__headerContainer">
+                                <p class="rightBarContainer__rightBar__infoBox__headerContainer__header">
                                     Some new header!
                                 </p>
                             </div>
-                            <div class="content__right-bar__info-box__text-container">
+                            <div class="rightBarContainer__rightBar__infoBox__textContainer">
                                 <p>
                                     For example, some new and usefull fixed text. And many another text and more text...
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="content__right-bar-placeholder"></div>
+                    <div class="rightBarPlaceholder"></div>
                 </div>
                 
             </main>
